--- a/X86_64.config
+++ b/X86_64.config
@@ -16,7 +16,7 @@ CONFIG_EFI_IMAGES=y
 CONFIG_VMDK_IMAGES=n
 
 # IPv6支持:
-CONFIG_IPV6=n  # 如若需要编译docker,需注释此行
+#CONFIG_IPV6=n  # 如若需要编译docker,需注释此行
 
 # USB3.0支持:
 CONFIG_PACKAGE_kmod-usb2=y
@@ -27,11 +27,11 @@ CONFIG_PACKAGE_kmod-usb3=y
 CONFIG_PACKAGE_luci-app-accesscontrol=y
 CONFIG_PACKAGE_luci-app-acme=y
 CONFIG_PACKAGE_luci-app-adblock=n
-CONFIG_PACKAGE_luci-app-adbyby-plus=m
+CONFIG_PACKAGE_luci-app-adbyby-plus=y
 CONFIG_PACKAGE_luci-app-adguardhome=y
 CONFIG_PACKAGE_luci-app-advanced-reboot=n
 CONFIG_PACKAGE_luci-app-advancedsetting=y
-CONFIG_PACKAGE_luci-app-airplay2=m
+CONFIG_PACKAGE_luci-app-airplay2=y
 CONFIG_PACKAGE_luci-app-amule=y
 CONFIG_PACKAGE_luci-app-aria2=y
 CONFIG_PACKAGE_luci-app-arpbind=n
@@ -43,10 +43,10 @@ CONFIG_PACKAGE_luci-app-bird1-ipv4=n
 CONFIG_PACKAGE_luci-app-bird1-ipv6=n
 CONFIG_PACKAGE_luci-app-bmx7=n
 CONFIG_PACKAGE_luci-app-brook-server=n
-CONFIG_PACKAGE_luci-app-cifs-mount=m
-CONFIG_PACKAGE_luci-app-cifsd=n
+CONFIG_PACKAGE_luci-app-cifs-mount=y
+CONFIG_PACKAGE_luci-app-cifsd=y
 CONFIG_PACKAGE_luci-app-clamav=n
-CONFIG_PACKAGE_luci-app-commands=n
+CONFIG_PACKAGE_luci-app-commands=y
 CONFIG_PACKAGE_luci-app-cpufreq=y
 CONFIG_PACKAGE_luci-app-cshark=n
 CONFIG_PACKAGE_luci-app-ddns=y
@@ -55,9 +55,9 @@ CONFIG_PACKAGE_luci-app-diskman=y
 CONFIG_PACKAGE_luci-app-diskman_INCLUDE_mdadm=y
 CONFIG_PACKAGE_luci-app-diskman_INCLUDE_kmod_md_raid456=y
 CONFIG_PACKAGE_luci-app-dnscrypt-proxy=n
-# CONFIG_PACKAGE_luci-app-dockerman=y
-# CONFIG_PACKAGE_luci-app-dockerman_INCLUDE_docker_ce=y
-# CONFIG_PACKAGE_luci-app-dockerman_INCLUDE_ttyd=y
+CONFIG_PACKAGE_luci-app-dockerman=y
+CONFIG_PACKAGE_luci-app-dockerman_INCLUDE_docker_ce=y
+CONFIG_PACKAGE_luci-app-dockerman_INCLUDE_ttyd=y
 CONFIG_PACKAGE_luci-app-dump1090=n
 CONFIG_PACKAGE_luci-app-dynapoint=n
 CONFIG_PACKAGE_luci-app-e2guardian=n
@@ -70,7 +70,7 @@ CONFIG_PACKAGE_luci-app-flowoffload=y
 CONFIG_PACKAGE_luci-app-freifunk-diagnostics=n
 CONFIG_PACKAGE_luci-app-freifunk-policyrouting=n
 CONFIG_PACKAGE_luci-app-freifunk-widgets=n
-CONFIG_PACKAGE_luci-app-frpc=n
+CONFIG_PACKAGE_luci-app-frpc=y
 CONFIG_PACKAGE_luci-app-fwknopd=n
 CONFIG_PACKAGE_luci-app-guest-wifi=n
 CONFIG_PACKAGE_luci-app-haproxy-tcp=n
@@ -135,7 +135,7 @@ CONFIG_PACKAGE_luci-app-qbittorrent=y
 CONFIG_PACKAGE_luci-app-qos=n
 CONFIG_PACKAGE_luci-app-radicale=n
 CONFIG_PACKAGE_luci-app-ramfree=y
-# CONFIG_PACKAGE_luci-app-rclone=y
+CONFIG_PACKAGE_luci-app-rclone=y
 CONFIG_PACKAGE_luci-app-rp-pppoe-server=n
 CONFIG_PACKAGE_luci-app-samba=n
 CONFIG_PACKAGE_luci-app-samba4=n
@@ -157,10 +157,10 @@ CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Redsocks2=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=n
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=n
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=y
 
-CONFIG_PACKAGE_luci-app-ssr-python-pro-server=n
+CONFIG_PACKAGE_luci-app-ssr-python-pro-server=y
 CONFIG_PACKAGE_luci-app-statistics=n
 CONFIG_PACKAGE_luci-app-syncdial=m
 CONFIG_PACKAGE_luci-app-syncthing=n
@@ -168,12 +168,12 @@ CONFIG_PACKAGE_luci-app-tinyproxy=n
 CONFIG_PACKAGE_luci-app-transmission=y
 CONFIG_PACKAGE_transmission-web-control=y
 CONFIG_PACKAGE_luci-app-travelmate=n
-CONFIG_PACKAGE_luci-app-trojan-server=n
+CONFIG_PACKAGE_luci-app-trojan-server=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-udpxy=n
 CONFIG_PACKAGE_luci-app-uhttpd=n
 CONFIG_PACKAGE_luci-app-unblockmusic=y
-CONFIG_UnblockNeteaseMusic_Go=n
+CONFIG_UnblockNeteaseMusic_Go=y
 CONFIG_UnblockNeteaseMusic_NodeJS=y
 CONFIG_PACKAGE_luci-app-unbound=n
 CONFIG_PACKAGE_luci-app-upnp=y
@@ -186,12 +186,12 @@ CONFIG_PACKAGE_luci-app-vpnbypass=n
 CONFIG_PACKAGE_luci-app-vsftpd=m
 CONFIG_PACKAGE_luci-app-watchcat=y
 CONFIG_PACKAGE_luci-app-webadmin=n
-CONFIG_PACKAGE_luci-app-wifischedule=n
-CONFIG_PACKAGE_luci-app-wireguard=n
-CONFIG_PACKAGE_luci-app-wol=n
+CONFIG_PACKAGE_luci-app-wifischedule=y
+CONFIG_PACKAGE_luci-app-wireguard=y
+CONFIG_PACKAGE_luci-app-wol=y
 CONFIG_PACKAGE_luci-app-wrtbwmon=y
 CONFIG_PACKAGE_luci-app-xlnetacc=m
-CONFIG_PACKAGE_luci-app-zerotier=m
+CONFIG_PACKAGE_luci-app-zerotier=y
 
 # CONFIG_PACKAGE_samba4-admin=y
 # CONFIG_PACKAGE_samba4-server=y
